# soa

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/ops/: trait.Drop.js
soa/: index.html  sidebar-items.js  stability.html  stability.json
soa/soa2/: index.html  sidebar-items.js  struct.Soa2.html
soa/soa3/: index.html  sidebar-items.js  struct.Soa3.html
soa/soa4/: index.html  sidebar-items.js  struct.Soa4.html
src/: lib.rs  soa.rs  soa2.rs  soa3.rs  soa4.rs  test.rs  unadorned.rs
src/soa/: lib.rs.html  soa2.rs.html  soa3.rs.html  soa4.rs.html
