[package]

name = "soa"
version = "0.9.2"
authors = ["Clark Gaebel <cg.wowus.cg@gmail.com>"]

documentation = "https://cgaebel.github.io/soa/"
homepage = "https://github.com/cgaebel/soa"
repository = "https://github.com/cgaebel/soa"

readme = "README.md"

keywords = [ "soa", "columnar" ]

license = "MIT"

description = "Struct-of-Array vector types"
